# formulaic

./: pyproject.toml
src/: __init__.py  buffer.pkl  main.py  run_inference.py  run_training.py  test.ipynb
src/agent/: alpha_pool.py  buffer.py  config.py  data.py  environment.py  expr_tree.py  expression.py  game.py  mcts.py  network.py  tokens.py  train.py  utils.py
