[project]
name = "python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "code2flow>=2.5.1",
    "common",
    "dolphindb>=3.0.2.4",
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.1",
    "matplotlib>=3.10.3",
    "notebook>=7.3.2",
    "numpy>=1.8",
    "pandas>=2.0.3",
    "polars>=1.24.0",
    "py-spy>=0.4.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[project.scripts]
python-project = "python_project:main"


[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.uv.sources]
common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "line-profiler>=4.2.0",
]
